--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-table": "^8.19.3",
     "@uidotdev/usehooks": "^2.4.1",
+    "braces": ">=3.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "fast-xml-parser": ">=4.4.1",
